--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="robots" content="index, follow">
-		<title>Status</title>
+		<title>Service Status</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 		<link rel="stylesheet" href="style.css">
-		<link rel="icon" href="https://raw.githubusercontent.com/jayfk/statuspage/master/template/favicon.png">
+		<link rel="icon" href="https://raw.githubusercontent.com/lrstanley/status/gh-pages/favicon-heartbeat.ico">
 		<link rel="prefetch" type="application/l10n" href="translations.ini" />
 	</head>
 	<body>
@@ -18,8 +18,8 @@
 				<section class="container">
 
 					<a class="navigation-title" href="">
-						<img class="img" src="https://raw.githubusercontent.com/jayfk/statuspage/master/template/logo.png" height="30">
-						<h1 class="title">Status</h1>
+						<img class="img" src="https://avatars2.githubusercontent.com/u/1847365?v=3&s=460" height="30">
+						<h1 class="title">Service Status</h1>
 					</a>
 
 
@@ -81,7 +81,7 @@
 			<footer class="footer">
 				<section class="container">
 					<hr/>
-					<p>Status page hosted by GitHub, generated with <a href='https://github.com/jayfk/statuspage'>jayfk/statuspage</a></p>
+					<p><a href='http://byteirc.org/channel/L'>Chat with us</a> to stay up to date</p>
 				</section>
 			</footer>
 
